# xul

./: .clangd  CMakeLists.txt
bench/: bench_stripool.cpp  main.cpp  readme.md
include/xul/: enum.hpp  fnv_hash.hpp  macronomicon.hpp  metapod.hpp  metapod_json.hpp  stripool.hpp  stripool_pmr.hpp  variadic.hpp
test/: main.cpp  test_enum.cpp  test_fnv_hash.cpp  test_metapod.cpp  test_metapod_json.cpp  test_stripool.cpp  test_variadic.cpp
